<resources>
    <!--    アクションバーのタイトル-->
    <string name="app_name">家計簿アプリ</string>
    <string name="title_home">ホーム</string>
    <string name="title_total_pay_purpose">内訳</string>
    <string name="title_register">アカウント作成</string>
    <string name="title_user_update">アカウント情報の変更</string>
    <string name="title_login">ログイン</string>
    <string name="title_member_list">メンバー</string>
    <string name="title_member_add">メンバー登録</string>
    <string name="title_member_update">メンバー更新</string>
    <string name="title_add_pay_record">支払い登録</string>
    <string name="title_pay_record_list">支払い履歴</string>
    <string name="title_detail_pay_record">支払い明細</string>
    <string name="title_update_pay_record">支払い明細更新</string>
    <string name="title_balance_list">家計簿の履歴</string>
    <string name="title_balance_detail">家計簿</string>
    <string name="title_balance_update">家計簿の更新</string>
    <string name="title_secession">退会</string>
    <string name="title_pay_purpose_add">支払い目的の登録</string>
    <string name="title_pay_purpose_update">支払い目的の更新</string>
    <string name="title_pay_purpose_list">支払い目的一覧</string>
    <string name="title_logout">ログアウト</string>
    <string name="title_license">ライセンス</string>


    <!--    ボタン名-->
    <string name="button_login">ログイン</string>
    <string name="button_signup">アカウント作成</string>
    <string name="button_register">アカウント登録</string>
    <string name="button_update_user">アカウント更新</string>
    <string name="button_member_regist">メンバー登録</string>
    <string name="button_update">更新</string>
    <string name="button_delete">削除</string>
    <string name="button_add">登録</string>
    <string name="button_secession_ok">はい</string>
    <string name="button_secession_ng">いいえ</string>
    <string name="button_refinement">絞り込み</string>
    <string name="button_add_balance">家計簿の登録</string>
    <string name="button_update_balance">家計簿の更新</string>
    <string name="button_set_actual_balance">実際残高の設定</string>
    <string name="button_balance_detail">支払い目的別合計</string>

    <!--    ヒント-->
    <string name="hint_password">パスワード</string>
    <string name="hint_email">メールアドレス</string>
    <string name="hint_username">ユーザー名</string>
    <string name="hint_member_name">メンバー名</string>
    <string name="hint_pay_amount">金額</string>
    <string name="hint_pay_date">支払日を選択してください</string>
    <string name="hint_pay_note">備考(支払い場所などをメモ)</string>
    <string name="hint_pay_purpose_name">支払い目的</string>
    <string name="hint_budget">予算</string>
    <string name="hint_start_date">開始日</string>
    <string name="hint_finish_date">終了日</string>
    <string name="hint_actual_balance">実際残高</string>

    <!--    初期-->
    <string name="un_selected">選択してください</string>
    <string name="formatted_number">%1$,d円</string>

    <!--    エラーメッセージ-->
    <string name="error_empty">入力必須です</string>
    <string name="error_selected">未選択です。</string>
    <string name="error_digit_6">6桁以上で入力して下さい</string>
    <string name="error_email">正しいメールアドレス形式で入力してください</string>
    <string name="error_number_format">半角数字で入力して下さい</string>
    <string name="error_range_pay_amount">%1$,d~%2$,dの間で入力してください</string>
    <string name="error_range_pay_date">1900年1月1日から本日までの間で選択してください</string>
    <string name="error_range_date">1900年1月1日以降の日付を選択してください</string>
    <string name="error_un_pay_purpose_resisted">支払い目的が登録されていません</string>
    <string name="error_un_member_resisted">メンバーが登録されていません</string>

    <!--    メニューバー-->
    <string name="open">開く</string>
    <string name="close">閉じる</string>

    <!--    チェックボックスメッセージ-->
    <string name="check_pay_done">領収しました</string>

    <!--    支払い明細画面-->
    <string name="payer">支払者：</string>
    <string name="pay_date">支払日：</string>
    <string name="pay_purpose">支払い目的：</string>
    <string name="pay_amount">支払額：</string>
    <string name="pay_done_check">領収状態：</string>
    <string name="pay_note">備考：</string>

    <!--    退会画面-->
    <string name="explain">退会手続きを実行します。</string>
    <string name="explain_warning">下記のボタンを押すと退会手続きを実行します。</string>
    <string name="final_check">お客様の情報はすべて削除されますがよろしいですか？</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    家計簿画面-->
    <string name="date_range">期間：</string>
    <string name="budget">予算：</string>
    <string name="sum_expenditure">支出合計額：</string>
    <string name="book_balance">帳簿残高：</string>
    <string name="actual_balance">実際残高</string>
    <string name="actual_balance_colon">実際残高：</string>
    <string name="purpose_name">%1s：</string>
    <string name="date_range_set">%1s ～ %2s</string>
    <string name="button_set_info">期間と予算の設定</string>
    <string name="total_payment_by_purpose">【目的別支払合計】</string>
    <string name="text_unit">円</string>
    <string name="text_difference">帳簿残高より%1s。</string>
    <string name="text_just">帳簿残高とぴったりです。</string>

    <!-- 設定画面-->
    <string name="title_setting">設定</string>
    <string name="next_month_withdrawal">次月に下ろす金額：</string>
    <string name="label_provisional_budget">毎月の仮予算</string>
    <string name="hint_provisional_budget">仮予算を入力</string>
    <string name="label_round_down_fraction">次月に下ろす金額の端数を処理する (千円未満切り捨て)</string>
    <string name="button_save_setting">設定を保存</string>
</resources>