<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_hamburger_menu"
        android:title=""/>
    <item
        android:id="@+id/nav_home"
        android:title ="@string/title_home"/>
    <item
        android:id="@+id/nav_member_list"
        android:title="@string/title_member_list" />

    <item
        android:id="@+id/nav_pay_purpose_list"
        android:title="@string/title_pay_purpose_list"/>

    <item
        android:id="@+id/nav_pay_record_list"
        android:title="@string/title_pay_record_list"/>

    <item
        android:id="@+id/nav_user_update"
        android:title="@string/title_user_update"/>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/title_logout"/>

    <item
        android:id="@+id/nav_secession"
        android:title="@string/title_secession"/>

</menu>