<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="10dp" />

            <Button
                android:id="@+id/buttonSetInfo"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/button_set_info"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_range"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/dateRangeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_range_set"
                        android:textSize="18sp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/dateRangeError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/budgetTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/budgetError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sum_expenditure"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/sumExpenditureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="16dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_balance"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bookBalanceTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- TextInputLayout (入力フォーム) -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/actualBalanceError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        app:counterEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/actualBalanceEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/actual_balance"
                            android:maxLength="7"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/text_unit"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/differenceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/buttonBalanceSheetAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add_balance"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/buttonSetActualBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_set_actual_balance"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/buttonBalanceDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_balance_detail"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_home" />

</androidx.drawerlayout.widget.DrawerLayout>
