<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- メインのコンテンツ -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- LinearLayoutを使用して垂直にレイアウト -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Toolbar (アクションバー) -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="10dp" />

            <TextView
                android:id="@+id/explainTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/explain"
                android:textColor="@android:color/holo_red_light"
                android:layout_gravity="center"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/explainWarningTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explain_warning"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/finalCheckTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_check"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/secessionOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_secession_ok"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="80dp"/>

            <Button
                android:id="@+id/secessionNG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_secession_ng"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="50dp" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- ナビゲーションビュー -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_home" />

</androidx.drawerlayout.widget.DrawerLayout>
