<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- メインのコンテンツ -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- LinearLayoutを使用して垂直にレイアウト -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Toolbar (アクションバー) -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="10dp" />

            <!-- 支払情報を表示するためのLinearLayout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:paddingVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payer"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/payerTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:paddingVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_date"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/payDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:paddingVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_purpose"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/payPurposeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:paddingVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_amount"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/payAmountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                    android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:paddingVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_done_check"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/payDoneCheckTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:paddingVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_note"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/payNoteTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_margin="16dp"
                android:id="@+id/buttonPayRecordUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_update"/>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- ナビゲーションビュー -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_home" />

</androidx.drawerlayout.widget.DrawerLayout>

